# mad_lib_template

./: CMakeLists.txt  README.md
mad_lib_template_benchmarks/: CMakeLists.txt  basic_benchmarks.cpp
mad_lib_template_lib/: CMakeLists.txt  mad_lib_template.hpp
mad_lib_template_tests/: CMakeLists.txt  basic_tests.cpp
